stateDiagram-v2
  [*] --> empty
  empty --> composing: start
  composing --> reviewing: candidate(hash)
  composing --> empty: cancel
  reviewing --> composing: retake
  reviewing --> empty: cancel
  reviewing --> submitting: confirm
  submitting --> empty: command ok
  submitting --> reviewing: command fail
